--- a/YouTubeDeepDarkMaterial.css
+++ b/YouTubeDeepDarkMaterial.css
@@ -3,7 +3,7 @@
 /*For the new Material Design for YouTube*/
 /*Theme made by RaitaroH @https://github.com/RaitaroH/YouTube-DeepDark*/
 
-/*2.0.2*/
+/*2.0.3*/
 
 	/*Main color variables*/
 	:root
@@ -737,6 +737,14 @@
 		opacity: 1 !important;
 	}
 	.iri-add-to-blacklist:hover svg
+	{
+		fill: var(--main-color) !important;
+	}
+	#iri-quick-controls button svg
+	{
+		fill: var(--dimer-text) !important;
+	}
+	#iri-quick-controls button:hover svg
 	{
 		fill: var(--main-color) !important;
 	}
