--- a/YouTubeDeepDarkMaterial.css
+++ b/YouTubeDeepDarkMaterial.css
@@ -744,11 +744,7 @@
 	{
 		fill: var(--dimer-text) !important;
 	}
-	#iri-quick-controls button[enabled] svg
-	{
-		fill: var(--main-text) !important;
-	}
-	#iri-quick-controls button:hover svg, #iri-quick-controls button[enabled]:hover svg
+	#iri-quick-controls button:hover svg, #iri-quick-controls button[enabled] svg, #iri-quick-controls button[enabled]:hover svg
 	{
 		fill: var(--main-color) !important;
 	}
