--- a/YouTubeDeepDarkMaterial.css
+++ b/YouTubeDeepDarkMaterial.css
@@ -3,7 +3,7 @@
 /*For the new Material Design for YouTube*/
 /*Theme made by RaitaroH @https://github.com/RaitaroH/YouTube-DeepDark*/
 
-/*2.0.9*/
+/*2.1.0*/
 
 	/*Main color variables*/
 	:root
@@ -569,6 +569,20 @@
 	{
 		color: var(--main-text) !important;
 		text-shadow: none !important;
+	}
+	
+	/*Keyboard focus*/
+	.ytp-probably-keyboard-focus .ytp-menuitem:focus .ytp-menuitem-content, .ytp-probably-keyboard-focus .ytp-menuitem:focus .ytp-menuitem-label
+	{
+		box-shadow: inset -2px -2px 0 var(--main-color),inset 0 2px 0 var(--main-color) !important;
+	}	
+	.ytp-probably-keyboard-focus .ytp-button:focus
+	{
+		box-shadow: inset 0 0 0 2px var(--main-color) !important;
+	}
+	.ytp-probably-keyboard-focus .ytp-progress-bar:focus
+	{
+		box-shadow: 0 0 0 2px var(--main-color) !important;
 	}
 	
 	/*Watch later svg*/
