--- a/YouTubeDeepDarkMaterial.css
+++ b/YouTubeDeepDarkMaterial.css
@@ -3,7 +3,7 @@
 /*For the new Material Design for YouTube*/
 /*Theme made by RaitaroH @https://github.com/RaitaroH/YouTube-DeepDark*/
 
-/*2.1.1*/
+/*2.1.2*/
 
 	/*Main color variables*/
 	:root
@@ -669,11 +669,11 @@
 		color: var(--dimer-text) !important;
 	}
 	
-	#index.ytd-playlist-video-renderer
+	#index.ytd-playlist-video-renderer, #index.ytd-playlist-panel-video-renderer
 	{
 		color: var(--dimer-text) !important;
 	}
-	
+		
 	/*Search bar*/
 	ytd-searchbox[mode=legacy][has-focus] #container.ytd-searchbox
 	{
