--- a/YouTubeDeepDarkMaterial.css
+++ b/YouTubeDeepDarkMaterial.css
@@ -3,7 +3,7 @@
 /*For the new Material Design for YouTube*/
 /*Theme made by RaitaroH @https://github.com/RaitaroH/YouTube-DeepDark*/
 
-/*2.1.8*/
+/*2.1.9*/
 
 	/*Main color variables*/
 	:root
@@ -859,6 +859,19 @@
 	{
 		color: var(--main-color) !important;
 	}
+	
+	/*Pinned by*/
+	#label.ytd-pinned-comment-badge-renderer
+	{
+		color: var(--main-color) !important;
+		opacity: 0.5;
+	}
+	yt-icon.ytd-pinned-comment-badge-renderer
+	{
+		fill: var(--main-color) !important;
+		opacity: 0.5;
+	}
+	
 	
 	/*Chat*/
 	.yt-live-chat-text-input-field-renderer-0 #focused.yt-live-chat-text-input-field-renderer
