--- a/YouTubeDeepDarkMaterial.css
+++ b/YouTubeDeepDarkMaterial.css
@@ -3,7 +3,7 @@
 /*For the new Material Design for YouTube*/
 /*Theme made by RaitaroH @https://github.com/RaitaroH/YouTube-DeepDark*/
 
-/*2.3.3*/
+/*2.3.4*/
 
 	/*Main color variables*/
 	:root
@@ -698,7 +698,7 @@
 	
 	.ytp-video-menu-item[aria-checked="true"] .ytp-video-menu-item-thumbnail
 	{
-	border-color: var(--main-color) !important;
+		border-color: var(--main-color) !important;
 	}
 	
 	#video-title.ytd-playlist-panel-video-renderer
@@ -719,6 +719,10 @@
 	ytd-searchbox[mode="legacy"] #container.ytd-searchbox:hover
 	{
 		border: 1px solid var(--main-color) !important;
+	}
+	ytd-searchbox[mode="legacy"] #container.ytd-searchbox input.ytd-searchbox
+	{
+		color: var(--main-text) !important;
 	}
 	/*Icon hover*/
 	#search-icon-legacy.ytd-searchbox:hover yt-icon.ytd-searchbox
